# p3d

./: .gitignore  .gitmodules  README.md  analysis.ipynb  generate_losses.ipynb  pyproject.toml  test_models.ipynb
blender_generate/: README.md  generate_images.py  generate_objects.py
p3d/: losses.py
p3d/models/: base_model.py  openlrm.py
p3d/scripts/: viser_render.py
