[project]
name = "p3d"
description = "Finding the odd View Out"
version = "0.1.0"

dependencies = [
    "accelerate",
    "black",
    "chardet==5.1.0",
    "clip @ git+https://github.com/openai/CLIP.git",
    "colour-science",
    "einops",
    "fairscale>=0.4.13",
    "ffmpeg",
    "fire>=0.5.0",
    "fsspec>=2023.6.0",
    "gradio",
    "invisible-watermark>=0.2.0",
    "ipykernel",
    "kornia==0.6.9",
    "lpips",
    "matplotlib",
    "mediapy",
    "natsort>=8.4.0",
    "nbformat",
    "ninja>=1.11.1",
    "numpy>=1.24.4",
    "omegaconf>=2.3.0",
    "open-clip-torch>=2.20.0",
    "opencv-python",
    "pandas>=2.0.3",
    "pillow>=9.5.0",
    "plotly",
    "pudb>=2022.1.3",
    "pyglet<2.0.0",
    "pytorch-lightning",
    "pyyaml>=6.0.1",
    "rembg",
    "rich>=12.5.1",
    "roma",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "streamlit",
    "streamlit-keyup==0.2.0",
    "tensorboard",
    "tensorboardx==2.6",
    "timm>=0.9.2",
    "tokenizers==0.12.1",
    "torch",
    "torchaudio>=2.0.2",
    "torchdata==0.6.1",
    "torchmetrics>=1.0.1",
    "torchtyping",
    "torchvision",
    "tqdm",
    "transformers",
    "trimesh",
    "triton==2.0.0",
    "tyro>=0.4.0",
    "urllib3<1.27,>=1.25.4",
    "viser>=0.2.3",
    "wandb>=0.15.6",
    "webdataset>=0.2.33",
    "xformers>=0.0.20"
]

[tool.setuptools.packages.find]
include = ["p3d"]